# uv-dependency-submission

./: .editorconfig  .rumdl.toml  Makefile  README.md  action.py  action.yml  pyproject.toml  test_gh_call.py  test_parsing.py
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  codeql.yml  integration.yml  publish.yml
