[project]
name = "uv-dependency-submission"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "ruff==0.15.1",
  "basedpyright==1.38.0",
]

[tool.basedpyright]
pythonVersion = "3.12"
exclude = [
  "data",
  ".venv"
]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120
