[project]
name = "uv-dependency-submission"
version = "1.1.1"
description = "GitHub Action for submitting uv.lock dependencies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "ruff==0.15.12",
  "basedpyright==1.39.3",
  "pytest==9.0.3"
]

[tool.basedpyright]
pythonVersion = "3.12"
exclude = [
  "data",
  ".venv"
]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120
